data/derived/fa15/progs/unify/prog0839.ml.out
Characters 80-85:
  | Sine(e1) -> "sin" + exprToString (e1);;
                ^^^^^
Error: This expression has type string but an expression was expected of type
         int
